--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-rootProject.name = 'java-fundamentals-constuctors-overloading-workshop''
+rootProject.name = 'java-fundamentals-constuctors-overloading-workshop'
 
